:sparkles: add connexion between client/server and arduino buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 </head>
 <body>
-<div class="js-red red">Red</div>
-<div class="js-blue blue">Blue</div>
+<span class="js-box boxJumper"></span>
 </body>
 </html>
